# felyne-bot

./: .gitignore  Cargo.toml  MEASUREMENT.md  README.md  example-config.json
bgm/: 5796.opus  5797.opus  5798.opus  5799.opus  5815.opus  5816.opus  5817.opus  5824.opus  5825.opus  5826.opus  5827.opus  5828.opus  5829.opus  5830.opus  5831.opus  5832.opus  5839.opus  5840.opus  5841.opus  5842.opus  6383.opus  6384.opus
felyne-trace/: Cargo.toml  README.md
felyne-trace/src/: consts.rs  event.rs  extension.rs  label.rs  lib.rs  traces.rs
queries/: delete-ack.sql  delete-gack.sql  delete-label.sql  delete-optout.sql  init.sql  select-ack.sql  select-admin.sql  select-control.sql  select-gack.sql  select-gather.sql  select-join.sql  select-label.sql  select-optout.sql  select-prefix.sql  select-serveropt.sql  select-undelete.sql  upsert-ack.sql  upsert-admin.sql  upsert-control.sql  upsert-gack.sql  upsert-gather.sql  upsert-join.sql  upsert-label.sql  upsert-optout.sql  upsert-prefix.sql  upsert-serveropt.sql  upsert-undelete.sql
sfx/: aggro1.opus  dig-hit1.opus  dig1.opus  gargwa1.opus  gargwa2.opus  gargwa3.opus  hit1.opus  maow1.opus  mewl-wiggle1.opus  mewl-wiggle2.opus  mewl1.opus  mewl2.opus  mewl3.opus  mewl4.opus  mewl5.opus  mewl6.opus  mewl7.opus  recover1.opus  wiggle1.opus
src/: audio_resources.rs  automata.rs  config.rs  constants.rs  dbs.rs  event_handler.rs  guild.rs  main.rs  server.rs  user.rs  voicehunt.rs  watchcat.rs
src/commands/: admin.rs  cat_control.rs  checks.rs  info.rs  mod.rs  opt.rs  utils.rs
src/dbs/: mod.rs  query.rs
src/voicehunt/: live.rs  mod.rs  mode.rs  receiver.rs
