[package]
name = "felyne-bot"
version = "0.3.0"
authors = ["Kyle Simpson <kyleandrew.simpson@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
bincode = "1"
crossbeam = "0.7"
dashmap = "4.0.0-rc6"
enum_primitive = "0.1"
futures = "0.3"
log = "0.4"
parking_lot = "0.11"
rand = "0.7"
serde = { version = "1", features = ["derive"] }
# sqlx = { default-features = false, features = [ "runtime-tokio", "sqlite" ], git = "https://github.com/launchbadge/sqlx.git" }
sqlx = { default-features = false, features = [ "runtime-tokio", "sqlite" ], version = "0.4.0-beta.1" }
tokio = { version = "0.2", features = [ "full" ]}
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend", "voice", "utils"]
#git = "https://github.com/FelixMcFelix/serenity.git"
#branch = "voice-rework"
path = "../serenity"
