[package]
name = "felyne-bot"
version = "0.4.0"
authors = ["Kyle Simpson <kyleandrew.simpson@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1"
dashmap = "5"
enum_primitive = "0.1"
flume = "0.10"
futures = "0.3"
parking_lot = "0.11"
postgres-native-tls = "0.5"
native-tls = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "^0.10.5", default_features = false, features = ["cache", "framework", "standard_framework", "native_tls_backend", "voice", "utils"] }
songbird = { version ="0.2.0-beta.1", default_features = false, features = ["serenity-native", "driver", "gateway"] }
tokio = { version = "1", features = [ "full" ]}
tokio-postgres = "0.7"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.felyne-trace]
path = "felyne-trace"
features = ["async"]
