[package]
name = "felyne-bot"
version = "0.5.0"
authors = ["Kyle Simpson <kyleandrew.simpson@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1"
dashmap = "5"
enum_primitive = "0.1"
flume = "0.11"
futures = "0.3"
parking_lot = "0.12"
postgres-native-tls = "0.5"
native-tls = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "^0.12.0-rc2", default_features = false, features = ["cache", "framework", "standard_framework", "native_tls_backend", "voice", "utils"] }
songbird = { version ="0.4.0-rc-2", default_features = false, features = ["serenity", "driver", "gateway", "receive", "native"] }
tokio = { version = "1", features = [ "full" ]}
tokio-postgres = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"

[dependencies.felyne-trace]
path = "felyne-trace"
features = ["async"]

[dependencies.symphonia]
version = "0.5"
no-default-features = true
features = ["adpcm", "pcm", "ogg", "wav"] # ...as well as any extras you need!
